Eevee Motion Blur crash #92682

Closed
opened 2021-10-31 16:12:03 +01:00 by Aleksandr · 14 comments

System Information
Operating system: Linux-5.11.0-38-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.74

Blender Version
Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-10-29 18:17, hash: fcf1ba18f0
Caused by b9febb54a4

Short description of error
Eevee crashing every time when I trying render with motion blur enabled in complex scenes.

Exact steps for others to reproduce the error

  • Open my file
  • Press F12.

Screencast-2021-10-31_18.11.17.mp4

Eeeve31_Crash.blend

Eeeve31_Crash.crash.txt

**System Information** Operating system: Linux-5.11.0-38-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.74 **Blender Version** Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-10-29 18:17, hash: `fcf1ba18f0` Caused by b9febb54a4 **Short description of error** Eevee crashing every time when I trying render with motion blur enabled in complex scenes. **Exact steps for others to reproduce the error** - Open my file - Press F12. [Screencast-2021-10-31_18.11.17.mp4](https://archive.blender.org/developer/F11640686/Screencast-2021-10-31_18.11.17.mp4) [Eeeve31_Crash.blend](https://archive.blender.org/developer/F11640656/Eeeve31_Crash.blend) [Eeeve31_Crash.crash.txt](https://archive.blender.org/developer/F11640657/Eeeve31_Crash.crash.txt)
Author

Added subscriber: @viadvena

Added subscriber: @viadvena

Added subscriber: @Baardaap

Added subscriber: @Baardaap

Doesn't crash over here.

Doesn't crash over here.
Author

@Baardaap I experimenting with file. I used sapling tree addon for the trees. I'm not sure, but If I copy everything except trees in new file - in new file rendering is proper. But if I delete trees from this file - still crashing (file is doomed?).

@Baardaap I experimenting with file. I used sapling tree addon for the trees. I'm not sure, but If I copy everything except trees in new file - in new file rendering is proper. But if I delete trees from this file - still crashing (file is doomed?).
Author

I captured this! Crash appears when I try to render with Motion Blur enabled.

I captured this! Crash appears when I try to render with Motion Blur enabled.
Aleksandr changed title from Eevee crash to Eevee Motion Blur crash 2021-10-31 19:30:48 +01:00
Author

Original file has particles and few high-polys = 1 500 000 polys. So there is pretty much dynamics.

Screencast-2021-10-31_21.35.45.mp4

Original file has particles and few high-polys = 1 500 000 polys. So there is pretty much dynamics. [Screencast-2021-10-31_21.35.45.mp4](https://archive.blender.org/developer/F11643517/Screencast-2021-10-31_21.35.45.mp4)
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. Can confirm the crash on master: 1e749d0602700f175d70eac75f510512fc3b8b42

This looks like a regression. Will bisect.

blender.exe         :0x00007FF73B35E990  mesh_batch_cache_request_surface_batches C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_mesh.c:874
blender.exe         :0x00007FF73B35DBB0  DRW_mesh_batch_cache_pos_vertbuf_get C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_mesh.c:1262
blender.exe         :0x00007FF73B38C8E0  EEVEE_motion_blur_cache_populate C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\engines\eevee\eevee_motion_blur.c:370
blender.exe         :0x00007FF73B3707F0  EEVEE_materials_cache_populate C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\engines\eevee\eevee_materials.c:888
blender.exe         :0x00007FF73B37AB80  EEVEE_render_cache C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\engines\eevee\eevee_render.c:245
blender.exe         :0x00007FF73B339800  DRW_render_object_iter C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:2011
blender.exe         :0x00007FF73B369710  eevee_render_to_image C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\engines\eevee\eevee_engine.c:510
blender.exe         :0x00007FF73B339A60  DRW_render_to_image C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:1967
blender.exe         :0x00007FF73BB235C0  engine_render_view_layer C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\engine.c:912
blender.exe         :0x00007FF73BB22C70  RE_engine_render C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\engine.c:1025
blender.exe         :0x00007FF73BB2BEC0  do_render_engine C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\pipeline.c:1066
blender.exe         :0x00007FF73BB2B950  do_render_compositor C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\pipeline.c:1192
blender.exe         :0x00007FF73BB2BF30  do_render_full_pipeline C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\pipeline.c:1462
blender.exe         :0x00007FF73BB29460  RE_RenderFrame C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\pipeline.c:1864
blender.exe         :0x00007FF73BAB71C0  render_startjob C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\render\render_internal.c:660
blender.exe         :0x00007FF73AF63180  do_job_thread C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_jobs.c:394
blender.exe         :0x00007FF73BCFB3F0  _ptw32_threadStart
ucrtbase.dll        :0x00007FF88DF71B20  configthreadlocale
KERNEL32.DLL        :0x00007FF88FEC7020  BaseThreadInitThunk
ntdll.dll           :0x00007FF8900A2630  RtlUserThreadStart```
Thanks for the report. Can confirm the crash on master: `1e749d0602700f175d70eac75f510512fc3b8b42` This looks like a regression. Will bisect. ```lines blender.exe :0x00007FF73B35E990 mesh_batch_cache_request_surface_batches C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_mesh.c:874 blender.exe :0x00007FF73B35DBB0 DRW_mesh_batch_cache_pos_vertbuf_get C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_cache_impl_mesh.c:1262 blender.exe :0x00007FF73B38C8E0 EEVEE_motion_blur_cache_populate C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\engines\eevee\eevee_motion_blur.c:370 blender.exe :0x00007FF73B3707F0 EEVEE_materials_cache_populate C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\engines\eevee\eevee_materials.c:888 blender.exe :0x00007FF73B37AB80 EEVEE_render_cache C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\engines\eevee\eevee_render.c:245 blender.exe :0x00007FF73B339800 DRW_render_object_iter C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:2011 blender.exe :0x00007FF73B369710 eevee_render_to_image C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\engines\eevee\eevee_engine.c:510 blender.exe :0x00007FF73B339A60 DRW_render_to_image C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\draw\intern\draw_manager.c:1967 blender.exe :0x00007FF73BB235C0 engine_render_view_layer C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\engine.c:912 blender.exe :0x00007FF73BB22C70 RE_engine_render C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\engine.c:1025 blender.exe :0x00007FF73BB2BEC0 do_render_engine C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\pipeline.c:1066 blender.exe :0x00007FF73BB2B950 do_render_compositor C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\pipeline.c:1192 blender.exe :0x00007FF73BB2BF30 do_render_full_pipeline C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\pipeline.c:1462 blender.exe :0x00007FF73BB29460 RE_RenderFrame C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\pipeline.c:1864 blender.exe :0x00007FF73BAB71C0 render_startjob C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\render\render_internal.c:660 blender.exe :0x00007FF73AF63180 do_job_thread C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_jobs.c:394 blender.exe :0x00007FF73BCFB3F0 _ptw32_threadStart ucrtbase.dll :0x00007FF88DF71B20 configthreadlocale KERNEL32.DLL :0x00007FF88FEC7020 BaseThreadInitThunk ntdll.dll :0x00007FF8900A2630 RtlUserThreadStart```
Member

Introduced in b9febb54a4

Introduced in b9febb54a4

Added subscribers: @HooglyBoogly, @brecht

Added subscribers: @HooglyBoogly, @brecht

@HooglyBoogly, this appears to be your commit.

@HooglyBoogly, this appears to be your commit.

This issue was referenced by 0f1a200a67

This issue was referenced by 0f1a200a67e8fb309872bbd5d6f7890efdd88086
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-11-19 17:40:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92682
No description provided.